--- a/public/css/scss/_style.scss
+++ b/public/css/scss/_style.scss
@@ -195,9 +195,12 @@ p {
     margin: 1em;
 }
 
-.user_name {
+.user_name,
+.user_name a {
     font-size: xx-large;
     font-family: "Bodoni Moda", sans-serif;
+    text-decoration: none;
+    color: black;
 }
 
 .follow_user {
