--- a/views/user/postDetails.ejs
+++ b/views/user/postDetails.ejs
@@ -10,16 +10,16 @@
                     <img src="/<%= post.image %>">
                     <div class="feed_lower">
                         <div class="icon__left">
-                            <a href="../like/<%= post._id %>"><i class="far fa-heart fa-2x"></i></a>
+                            <% if(userLiked){ %>
+                                <i class="fa fa-heart fa-2x"></i>
+                            <% }else{ %>
+                                <a href="../like/<%= post._id %>"><i class="far fa-heart fa-2x"></i></a>
+                            <% } %>
                             <a href="../comment/<%= post._id %>"><i class="far fa-comment fa-2x"></i></a>
                             <i class="far fa-share-square fa-2x"></i>
                         </div>
                         <span class="icon__text">&nbsp;
-                            <% if(!post.likes){ %>
-                                Likes: 0
-                            <% } else{ %>
-                            Likes: <%= post.likes %>
-                            <% } %>
+                            Likes: <%= likes %>
                 </span>
                         <div class="icon__right">
                             <i class="far fa-bookmark fa-2x"></i>
