--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -425,26 +425,30 @@ ul {
   margin-top: -10px;
 }
 
-.feed {
+.feed,
+.feed-w {
   padding: 20px;
   margin: 0;
   height: 500px;
   max-width: 500px;
 }
 
-.feed img {
+.feed img,
+.feed-w img {
   width: 100%;
   height: 100%;
   -webkit-box-shadow: 1px 1px 8px #c2c2c2, -1px -1px 8px #c2c2c2, -1px 1px 8px #c2c2c2, 1px -1px 8px #c2c2c2;
           box-shadow: 1px 1px 8px #c2c2c2, -1px -1px 8px #c2c2c2, -1px 1px 8px #c2c2c2, 1px -1px 8px #c2c2c2;
 }
 
-.feed img:hover {
+.feed img:hover,
+.feed-w img:hover {
   overflow: hidden;
   opacity: 0.7;
 }
 
-.feed_lower {
+.feed_lower,
+.feed-w_lower {
   background-color: rgba(0, 0, 0, 0.8);
   position: relative;
   z-index: 10;
@@ -454,8 +458,9 @@ ul {
   color: white;
 }
 
-.feed_lower a{
-  color: white;
+.feed-w {
+  max-width: 100%;
+  height: auto;
 }
 
 .icon_ {
