--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -432,9 +432,20 @@ ul {
   max-width: 500px;
 }
 
+.post {
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0%;
+  height: 500px;
+  max-width: 500px;
+}
+.post img,
 .feed img {
   width: 100%;
   height: 100%;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
   -webkit-box-shadow: 1px 1px 8px #c2c2c2, -1px -1px 8px #c2c2c2, -1px 1px 8px #c2c2c2, 1px -1px 8px #c2c2c2;
           box-shadow: 1px 1px 8px #c2c2c2, -1px -1px 8px #c2c2c2, -1px 1px 8px #c2c2c2, 1px -1px 8px #c2c2c2;
 }
@@ -549,5 +560,41 @@ textarea {
 .form-control input.invalid,
 .form-control textarea.invalid {
   border-color: red;
+}
+
+.comments{
+  max-width: 500px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: gray;
+  text-align: center;
+  margin-top: 0%;
+}
+
+.comment_card{
+  max-width: 500px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  background-color: gray;
+  color: white;
+  text-align: left;
+  margin-top: 0%;
+}
+
+.comment_description{
+  max-width: 450px;
+  padding: 10px;
+  background-color: white;
+  color: black;
+  text-align: left;
+  margin-left: 10px;
+  margin-right: 20px;
+}
+
+.comment_container{
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 50px;
 }
 /*# sourceMappingURL=styles.css.map */
