--- a/views/user/postDetails.ejs
+++ b/views/user/postDetails.ejs
@@ -28,7 +28,9 @@
                             Likes: <%= likes %>
                         </span>
                         <div class="icon__right">
-                            <i class="far fa-bookmark fa-2x"></i>
+                            <% if(String(author._id) == String(user._id)){ %>
+                                <a href="../edit/<%= post._id %>"><i class="far fa-edit fa-2x"></i></a>
+                            <% } %>
                         </div>
                     </div>
                     <div class="comment_container">
