--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -373,12 +373,12 @@ ul {
 }
 
 .gallery img {
-  max-height: 100%;
-  min-width: 100%;
+  max-height: 500px;
   -o-object-fit: cover;
      object-fit: cover;
   vertical-align: bottom;
-  height: 100%;
+  height: auto;
+  background-position: center;
 }
 
 .profile_img {
@@ -433,34 +433,17 @@ ul {
   max-width: 500px;
 }
 
-.post {
-  padding: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 0%;
-  height: 500px;
-  max-width: 500px;
-}
-.post img,
-.feed img
 .feed img,
 .feed-w img {
   width: 100%;
   height: 100%;
-  padding-bottom: 0%;
-  margin-bottom: 0%;
   -webkit-box-shadow: 1px 1px 8px #c2c2c2, -1px -1px 8px #c2c2c2, -1px 1px 8px #c2c2c2, 1px -1px 8px #c2c2c2;
           box-shadow: 1px 1px 8px #c2c2c2, -1px -1px 8px #c2c2c2, -1px 1px 8px #c2c2c2, 1px -1px 8px #c2c2c2;
 }
 
-.feed img:hover,
-.feed-w img:hover {
-  overflow: hidden;
-  opacity: 0.7;
-}
-
 .feed_lower,
 .feed-w_lower {
+  opacity: 0;
   background-color: rgba(0, 0, 0, 0.8);
   position: relative;
   z-index: 10;
@@ -468,10 +451,12 @@ ul {
   height: 50px;
   padding: 10px;
   color: white;
+  width: 100%;
 }
 
-.post a{
-  color: white;
+.feed_lower:hover,
+.feed-w_lower:hover {
+  opacity: 1;
 }
 
 .feed-w {
@@ -570,41 +555,5 @@ textarea {
 .form-control input.invalid,
 .form-control textarea.invalid {
   border-color: red;
-}
-
-.comments{
-  max-width: 500px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: gray;
-  text-align: center;
-  margin-top: 0%;
-}
-
-.comment_card{
-  max-width: 500px;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  background-color: gray;
-  color: white;
-  text-align: left;
-  margin-top: 0%;
-}
-
-.comment_description{
-  max-width: 450px;
-  padding: 10px;
-  background-color: white;
-  color: black;
-  text-align: left;
-  margin-left: 10px;
-  margin-right: 20px;
-}
-
-.comment_container{
-  padding-top: 0px;
-  margin-top: 0px;
-  padding-bottom: 50px;
 }
 /*# sourceMappingURL=styles.css.map */
