--- a/views/user/feed.ejs
+++ b/views/user/feed.ejs
@@ -14,7 +14,7 @@
                                             <% if(liked[i]){ %>
                                                 <i class="fa fa-heart fa-2x"></i>
                                             <% }else{ %>
-                                                <a href="../like/<%= posts[i]._id %>"><i class="far fa-heart fa-2x"></i></a>
+                                                <a href="../like/<%= posts[i]._id %>/feed"><i class="far fa-heart fa-2x"></i></a>
                                             <% } %>
                                             <a href="../comment/<%= posts[i]._id %>"><i class="far fa-comment fa-2x"></i></a>
                                         </div>
