--- a/views/user/postDetails.ejs
+++ b/views/user/postDetails.ejs
@@ -19,7 +19,7 @@
                             <% if(userLiked){ %>
                                 <i class="fa fa-heart fa-2x"></i>
                             <% }else{ %>
-                                <a href="../like/<%= post._id %>"><i class="far fa-heart fa-2x"></i></a>
+                                <a href="../like/<%= post._id %>/postDetails"><i class="far fa-heart fa-2x"></i></a>
                             <% } %>
                             <a href="../comment/<%= post._id %>"><i class="far fa-comment fa-2x"></i></a>
                         </div>
