--- a/public/css/scss/_style.scss
+++ b/public/css/scss/_style.scss
@@ -191,10 +191,9 @@ p {
     margin: auto;
 }
 
-.profile_header {
-    margin: 1em;
-}
-
+// .profile_header {
+//     margin: 1em;
+// }
 .user_name,
 .user_name a {
     font-size: xx-large;
