--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -193,10 +193,6 @@ p {
   margin: auto;
 }
 
-.profile_header {
-  margin: 1em;
-}
-
 .user_name,
 .user_name a {
   font-size: xx-large;
@@ -454,10 +450,6 @@ ul {
   width: 100%;
 }
 
-.feed a{
-  color: white;
-}
-
 .feed_lower:hover,
 .feed-w_lower:hover {
   opacity: 1;
@@ -526,7 +518,6 @@ textarea {
 }
 
 .login-form {
-  width: 20rem;
   max-width: 90%;
   margin: auto;
   display: block;
@@ -559,5 +550,69 @@ textarea {
 .form-control input.invalid,
 .form-control textarea.invalid {
   border-color: red;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 26px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 19.5px;
+  width: 19.5px;
+  left: 4px;
+  bottom: 3px;
+  background-color: #118ab2;
+  -webkit-transition: .6s;
+  transition: .6s;
+}
+
+input:checked + .slider:before {
+  background-color: #fdf2f0;
+}
+
+input:checked + .slider {
+  background-color: #118ab2;
+}
+
+input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #2196F3;
+          box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(21px);
+          transform: translateX(21px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 /*# sourceMappingURL=styles.css.map */
