--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,12 +1,12 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/auth.css">
+    <!-- <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/auth.css"> -->
     </head>
 
     <body>
         <%- include('../includes/nav.ejs') %>
 
-            <main>
+            <main class="main_width">
                 <% if (errorMessage) { %>
                     <div>
                         <%= errorMessage %>
