Post details and other CSS

--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -102,7 +102,7 @@ ul {
     }
     &_lower {
         // width: 500px;
-        opacity: 0;
+        // opacity: 0;
         background-color: rgba(rgb(0, 0, 0), 0.8);
         position: relative;
         z-index: 10;
