--- a/public/css/scss/_style.scss
+++ b/public/css/scss/_style.scss
@@ -145,6 +145,7 @@ body {
 }
 
 .main__nav_item a {
+    text-shadow: 0px 0px 3px #000000;
     text-decoration: none;
     padding: 36px;
     color: white;
@@ -230,6 +231,32 @@ p {
 .link {
     text-decoration: none;
     color: black;
+}
+
+.comment_card {
+    padding: 20px;
+    margin: 5px;
+    box-shadow: 1px 1px 5px grey;
+    a {
+        text-decoration: none;
+    }
+}
+
+.comment_form {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 200px;
+    textarea {
+        padding: 20px;
+        background-color: rgb(226, 226, 226);
+    }
+    button {
+        margin-top: 5px;
+        padding: 5px;
+    }
 }
 
 @include MQ(M) {
