--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,6 +146,7 @@ body {
 }
 
 .main__nav_item a {
+  text-shadow: 0px 0px 3px #000000;
   text-decoration: none;
   padding: 36px;
   color: white;
@@ -229,6 +230,41 @@ p {
 .link {
   text-decoration: none;
   color: black;
+}
+
+.comment_card {
+  padding: 20px;
+  margin: 5px;
+  -webkit-box-shadow: 1px 1px 5px grey;
+          box-shadow: 1px 1px 5px grey;
+}
+
+.comment_card a {
+  text-decoration: none;
+}
+
+.comment_form {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 200px;
+}
+
+.comment_form textarea {
+  padding: 20px;
+  background-color: #e2e2e2;
+}
+
+.comment_form button {
+  margin-top: 5px;
+  padding: 5px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -439,7 +475,6 @@ ul {
 
 .feed_lower,
 .feed-w_lower {
-  opacity: 0;
   background-color: rgba(0, 0, 0, 0.8);
   position: relative;
   z-index: 10;
