--- a/views/user/postDetails.ejs
+++ b/views/user/postDetails.ejs
@@ -18,10 +18,9 @@
                         <div class="icon__left">
                             <% if(userLiked){ %>
                                 <i class="fa fa-heart fa-2x"></i>
-                            <% }else{ %>
-                                <a href="../like/<%= post._id %>/postDetails"><i class="far fa-heart fa-2x"></i></a>
-                            <% } %>
-                            <a href="../comment/<%= post._id %>"><i class="far fa-comment fa-2x"></i></a>
+                                <% }else{ %>
+                                    <a href="../like/<%= post._id %>/postDetails"><i class="far fa-heart fa-2x"></i></a>
+                                    <% } %>
                         </div>
                         <span class="icon__text">&nbsp;
                             Likes: <%= likes %>
@@ -29,18 +28,28 @@
                         <div class="icon__right">
                             <% if(String(author._id) == String(user._id)){ %>
                                 <a href="../edit/<%= post._id %>"><i class="far fa-edit fa-2x"></i></a>
-                            <% } %>
+                                <% } %>
                         </div>
                     </div>
                     <div class="comment_container">
-                        <% for(comment of comments){ %>
+                        <% for(comment of comments){ if(comment.description) { %>
                             <div class="comment_card">
-                                <%= comment.username %>
-                                    <div class="comment_description">
-                                        <%= comment.description %>
-                                    </div>
+                                <a href="./../profile/<%= comment.userId %>">
+                                    <%= comment.username %>
+                                </a>
+                                <div class="comment_description">
+                                    <%= comment.description %>
+                                </div>
+
                             </div>
-                            <% } %>
+                            <% } } %>
+                                <div class="comments">
+                                    <form class="comment_form" action="/postComment" method="POST">
+                                        <textarea name="description" cols="50" rows="5" placeholder="Type your comment..."></textarea>
+                                        <input type="text" value="<%= post._id %>" name="postId" hidden>
+                                        <button type="submit">Submit</button>
+                                    </form>
+                                </div>
                     </div>
                 </div>
             </div>
