--- a/public/css/darkstyle.css
+++ b/public/css/darkstyle.css
@@ -17,6 +17,10 @@ h5 {
     color: white;
 }
 
+.gallery li {
+    border: 5pt solid rgb(25, 27, 29);
+}
+
 .main-header {
     background: black;
     border-bottom: 1px solid gray;
@@ -74,4 +78,18 @@ textarea,
     border-radius: 3px;
     border: none;
     color: white;
+}
+
+.comment_form textarea {
+    background-color: rgb(54, 54, 54);
+    color: white;
+}
+
+.comment_form button {
+    background-color: rgb(36, 36, 36);
+    color: white;
+}
+
+.comment_card a {
+    color: yellow;
 }
