--- a/views/user/feed.ejs
+++ b/views/user/feed.ejs
@@ -5,31 +5,32 @@
                 <div class="flex">
 
                     <div class="left">
-                        <% for (let i = posts.length - 1; i >= 0; i--){ %>
+                        <% for (let i = posts.length - 1; i >= 0; i--){ var link = "../../postDetails/" + posts[i]._id %>
+                            <div class="left" onclick="window.location.href='<%= link %>'">
 
-                            <div class="feed">
-                                <div class="feed_img">
-                                    <img src="/<%= posts[i].image %>" onerror="noImage(this)" loading="lazy">
-                                </div>
-                                <div class="feed_side">
+                                <div class="feed">
+                                    <div class="feed_img">
+                                        <img src="/<%= posts[i].image %>" onerror="noImage(this)" loading="lazy">
+                                    </div>
+                                    <div class="feed_side">
 
-                                    <span class="icon__text">&nbsp;Likes: <%= likes[i]%></span>
-                                    <p>
-                                        <%= posts[i].description %>
-                                    </p>
-                                    <p>
-                                        <%= posts[i].time %>
-                                    </p>
-                                    <div class="icon__left">
-                                        <% if(liked[i]){ %>
-                                            <i class="fa fa-heart fa-2x"></i>
-                                            <% }else{ %>
-                                                <a href="../like/<%= posts[i]._id %>/feed"><i class="far fa-heart fa-2x"></i></a>
-                                                <% } %>
-                                                    <a href="../comment/<%= posts[i]._id %>"><i class="far fa-comment fa-2x"></i></a>
+                                        <span class="icon__text">&nbsp;Likes: <%= likes[i]%></span>
+                                        <p>
+                                            <%= posts[i].description %>
+                                        </p>
+                                        <p>
+                                            <%= posts[i].time %>
+                                        </p>
+                                        <div class="icon__left">
+                                            <% if(liked[i]){ %>
+                                                <i class="fa fa-heart fa-2x"></i>
+                                                <% }else{ %>
+                                                    <a href="../like/<%= posts[i]._id %>/feed"><i class="far fa-heart fa-2x"></i></a>
+                                                    <% } %>
+                                                        <a href="../comment/<%= posts[i]._id %>"><i class="far fa-comment fa-2x"></i></a>
+                                        </div>
                                     </div>
                                 </div>
-
                             </div>
                             <% } %>
                     </div>
