--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -67,7 +67,7 @@
                                                                 <a href="../comment/<%= posts[i]._id %>"><i class="far fa-comment fa-2x"></i></a>
                                                                 <div class="icon__right">
                                                                     <% if(canEdit){ %>
-                                                                        <a href="../edit/<%= posts._id %>"><i class="far fa-edit fa-2x"></i></a>
+                                                                        <a href="../edit/<%= posts[i]._id %>"><i class="far fa-edit fa-2x"></i></a>
                                                                         <% } %>
                                                                 </div>
                                                 </div>
