--- a/views/user/newPost.ejs
+++ b/views/user/newPost.ejs
@@ -3,7 +3,9 @@
         <main>
             <div class="main_width">
                 <form class="form-new-post" action="/newPost" method="POST" enctype="multipart/form-data">
-                    <div class="user_name">Random Name</div>
+                    <div class="user_name">
+                        Create a new Pictournal
+                    </div>
                     <label for="image">Please Select Your Picture</label>
                     <input type="file" name="image">
                     <label for="tags">Tags</label>
@@ -12,12 +14,12 @@
                     <textarea name="post_desc" id="post_desc"></textarea>
                     <label for="privacy">Viewable to:</label>
                     <div class="radio-privacy">
-                      <input type="radio" name="privacy" value="public" id="public">
-                      <label for="public">Public</label><br>
-                      <input type="radio" name="privacy" value="followers" id="followers" checked>
-                      <label for="followers">Followers</label><br>
-                      <input type="radio" name="privacy" value="private" id="private">
-                      <label for="private">Private</label><br>
+                        <input type="radio" name="privacy" value="public" id="public">
+                        <label for="public">Public</label><br>
+                        <input type="radio" name="privacy" value="followers" id="followers" checked>
+                        <label for="followers">Followers</label><br>
+                        <input type="radio" name="privacy" value="private" id="private">
+                        <label for="private">Private</label><br>
                     </div>
                     <button class="btn" type="submit">Submit</button>
                 </form>
