--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -79,5 +79,6 @@
                                     <% } %>
                 </ul>
             </div>
+            <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage}) %>
         </main>
         <%- include('../includes/end.ejs') %>
