--- a/views/user/feed.ejs
+++ b/views/user/feed.ejs
@@ -35,6 +35,7 @@
                             <% } %>
                     </div>
                 </div>
+                <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage}) %>
             </div>
         </main>
         <%- include('../includes/end.ejs') %>
