--- a/views/user/postDetails.ejs
+++ b/views/user/postDetails.ejs
@@ -30,6 +30,11 @@
                                 <a href="../edit/<%= post._id %>"><i class="far fa-edit fa-2x"></i></a>
                                 <% } %>
                         </div>
+                        <div class="icon__right">
+                            <% if(String(author._id) == String(user._id)){ %>
+                                <a href="../delete/<%= post._id %>"><i class="far fa-delete fa-2x"></i></a>
+                                <% } %>
+                        </div>
                     </div>
                     <div class="comment_container">
                         <% for(comment of comments){ if(comment.description) { %>
