--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -43,40 +43,40 @@
                             <% } else { %>
                                 <% for (let i = posts.length - 1; i >= 0; i--){  
                                     var link = "../../postDetails/" + posts[i]._id %>
-                                    <div class="left" onclick="window.location.href='<%= link %>'">
-                                        <div class="feed">
-                                            <div class="feed_img">
-                                                <img src="/<%= posts[i].image %>" onerror="noImage(this)" loading="lazy">
-                                            </div>
-                                            <div class="feed_side">
-
-
-                                                <span class="icon__text">&nbsp;Likes: <%= likes[i] %></span>
-                                                <p>
-                                                    <%= posts[i].description %>
-                                                </p>
-                                                <p>
-                                                    <%= posts[i].time %>
-                                                </p>
-                                                <div class="icon__left">
-                                                    <% if(liked[i]){ %>
-                                                        <i class="fa fa-heart fa-2x"></i>
-                                                        <% }else{ %>
-                                                            <a href="../like/<%= posts[i]._id %>/feed"><i class="far fa-heart fa-2x"></i></a>
-                                                            <% } %>
-                                                                <a href="../comment/<%= posts[i]._id %>"><i class="far fa-comment fa-2x"></i></a>
-                                                                <div class="icon__right">
-                                                                    <% if(canEdit){ %>
-                                                                        <a href="../edit/<%= posts[i]._id %>"><i class="far fa-edit fa-2x"></i></a>
-                                                                        <% } %>
-                                                                </div>
-                                                </div>
-                                            </div>
-
+                                    <!-- <div class="left" onclick="window.location.href='<%= link %>'"> -->
+                                    <div class="feed" onclick="window.location.href='<%= link %>'">
+                                        <div class="feed_img">
+                                            <img src="/<%= posts[i].image %>" onerror="noImage(this)" loading="lazy">
                                         </div>
-                                        <% } %>
+                                        <div class="feed_side">
+
+
+                                            <span class="icon__text">&nbsp;Likes: <%= likes[i] %></span>
+                                            <p>
+                                                <%= posts[i].description %>
+                                            </p>
+                                            <p>
+                                                <%= posts[i].time %>
+                                            </p>
+                                            <div class="icon__left">
+                                                <% if(liked[i]){ %>
+                                                    <i class="fa fa-heart fa-2x"></i>
+                                                    <% }else{ %>
+                                                        <a href="../like/<%= posts[i]._id %>/feed"><i class="far fa-heart fa-2x"></i></a>
+                                                        <% } %>
+                                                            <a href="../comment/<%= posts[i]._id %>"><i class="far fa-comment fa-2x"></i></a>
+                                                            <div class="icon__right">
+                                                                <% if(canEdit){ %>
+                                                                    <a href="../edit/<%= posts[i]._id %>"><i class="far fa-edit fa-2x"></i></a>
+                                                                    <% } %>
+                                                            </div>
+                                            </div>
+                                        </div>
+
                                     </div>
                                     <% } %>
+                                        <!-- </div> -->
+                                        <% } %>
                 </ul>
             </div>
             <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage}) %>
