--- a/public/css/darkstyle.css
+++ b/public/css/darkstyle.css
@@ -93,3 +93,8 @@ textarea,
 .comment_card a {
     color: yellow;
 }
+
+.feed,
+.feed img {
+    box-shadow: 1px 1px 3px rgb(27, 27, 27), -1px -1px 3px rgb(27, 27, 27), -1px 1px 3px rgb(27, 27, 27), 1px -1px 3px rgb(27, 27, 27);
+}
