--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -306,6 +306,7 @@ li img {
   color: white;
   background-color: black;
 }
+
 article.main_page__user_hover {
   position: absolute;
   bottom: 2%;
@@ -453,7 +454,7 @@ ul {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  border: 5pt solid white;
+  border: 5pt solid #d3d3d3;
   overflow: hidden;
   text-align: center;
 }
@@ -605,6 +606,18 @@ ul {
 .user__static {
   position: fixed;
   width: 500px;
+}
+
+.profile_header,
+.gallery,
+.message_main,
+.form-new-post,
+.login-form,
+.follow_user {
+  background: #d3d3d3;
+  padding: 2%;
+  border-radius: 20px;
+  border: none;
 }
 
 form {
