--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -42,6 +42,14 @@ ul {
     // width: auto;
 }
 
+.main_page__img {
+    height: 500px !important;
+    width: 100% !important;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
 .profile_img {
     border-radius: 150px;
     max-width: 300px;
