--- a/public/css/scss/_images.scss
+++ b/public/css/scss/_images.scss
@@ -51,9 +51,9 @@ ul {
 }
 
 .profile_img {
-    border-radius: 150px;
-    max-width: 300px;
-    max-height: 300px;
+    border-radius: 100px;
+    width: 200px;
+    height: 200px;
 }
 
 // ADVANCED
